syntax = "proto3";

package exonum.examples.cryptocurrency_advanced.lvm;

import "helpers.proto";

message Contract {
  exonum.PublicKey pub_key = 1;
  string code = 2;
  map<string, string> state = 3;
}

message CreateContract {
  exonum.PublicKey pub_key = 1;
  string code = 2;
}

message CallContract {
  exonum.PublicKey pub_key = 1;
  string fn_name = 2;
  repeated string args = 3;
}

